- Added function to read experiment name and computer name from runParameters file
    used to generate read name prefix if config file does not exist, updated tests
- Ignore N's in barcode sequence when looking for matches, updated tests

release 1.16
- AlignmentFilterTest.java, testChimericReads -
-   compare deeply the content of json files with
-   org.codehaus.jackson.map.ObjectMapper,
-   ignore the programVersion field
- Change all tabs to spaces
- Remove javac warning
- Fix separate tags for dual index runs and add tests

release 1.15
- ensure the readname does not start with :
- Illumina HiSeqX instruments: one loc file for all lanes and tiles, no config xml files in basecalls or intensities directories
- allow for absence of run id and instrument info in the configuration file

release 1.14
- AlignmentFilter now supports BAM/SAM files containing secondary and supplemental alignments

release 1.13
- Add BC_READ and SEC_BC_READ command line options to specify which reads the barcode tag and second barcode tag should be attached to

release 1.12
- handled EXCLUDE_UNALIGNED=true for xahuman in SplitBamByChromosomes
- use separate test directories test1/2/3 where threading can cause output file clashes e.g. AlignmentFilterTest
- merge tests where one test uses the output of another e.g. ChangeBamHeaderTest

release-1.11
- include PG field in new RG header records
- use Picard 1.96 rather than 1.84
- [Hinxton #354882] separate_y_chromosome_data

release-1.10
- bugfix for single fragment/read templates in AlignmentFilter
- use Picard 1.84

release-1.09
- allow cycle range by read to be specified on command line

release-1.08
- corrects compile errors which went undetected in 1.07

release-1.07
- adapted IlluminaFileReader to read either normal or gzip compressed files

release-1.06
- corrects errors in git tagging with 1.04 and 1.05

release-1.04
- new tool SplitBamByChromosomes