@@ -64,7 +64,7 @@ public class TileTest {
         cycleRangeByRead.put("read1", cycleRangeRead1);
         cycleRangeByRead.put("read2", cycleRangeRead2);
         cycleRangeByRead.put("readIndex", cycleRangeIndex);
-        tile = new Tile(intensityDir, baseCallDir, id, lane, tileNumber, cycleRangeByRead, true, true, barcodeSeqTagName, barcodeQualTagName);
+        tile = new Tile(intensityDir, baseCallDir, id, lane, tileNumber, cycleRangeByRead, true, true, true, barcodeSeqTagName, barcodeQualTagName);
     }
 
     @AfterClass
@@ -194,7 +194,7 @@ public class TileTest {
         HashMap<String, int[]> cycleRangeByRead = new HashMap<String, int[]>(1);
         cycleRangeByRead.put("read1", cycleRangeRead_1);
 
-        Tile tile2 = new Tile(intensityDir_2, baseCallDir_2, id_2, lane_2, tileNumber_2, cycleRangeByRead, false, true, barcodeSeqTagName, barcodeQualTagName);
+        Tile tile2 = new Tile(intensityDir_2, baseCallDir_2, id_2, lane_2, tileNumber_2, cycleRangeByRead, false, true, true, barcodeSeqTagName, barcodeQualTagName);
         tile2.openBaseCallFiles();
         tile2.processTile(outputSam);
         tile2.closeBaseCallFiles();
@@ -224,7 +224,7 @@ public class TileTest {
         HashMap<String, int[]> cycleRangeByRead = new HashMap<String, int[]>(1);
         cycleRangeByRead.put("read1", cycleRangeRead_1);
 
-        Tile tile2 = new Tile(intensityDir_2, baseCallDir_2, id_2, lane_2, tileNumber_2, cycleRangeByRead, false, false, barcodeSeqTagName, barcodeQualTagName);
+        Tile tile2 = new Tile(intensityDir_2, baseCallDir_2, id_2, lane_2, tileNumber_2, cycleRangeByRead, false, false, false, barcodeSeqTagName, barcodeQualTagName);
         tile2.openBaseCallFiles();
         tile2.processTile(outputSam);
         tile2.closeBaseCallFiles();
@@ -235,7 +235,7 @@ public class TileTest {
         BufferedReader md5Stream = new BufferedReader(new FileReader(md5File));
         String md5 = md5Stream.readLine();
 
-        assertEquals("9849624a131db28e5cd2af92c1064159", md5);        
+        assertEquals("d615d64d59595d1cf10007a30da989bf", md5);        
     }
     
     @Test
@@ -256,7 +256,7 @@ public class TileTest {
         cycleRangeByRead.put("read2", cycleRangeRead2GA);
         cycleRangeByRead.put("readIndex", cycleRangeIndexGA);
         
-        Tile tileGA = new Tile(intensityDirGA, baseCallDirGA, idGA, laneGA, tileNumberGA, cycleRangeByRead, false, true, barcodeSeqTagName, barcodeQualTagName);
+        Tile tileGA = new Tile(intensityDirGA, baseCallDirGA, idGA, laneGA, tileNumberGA, cycleRangeByRead, false, true, true, barcodeSeqTagName, barcodeQualTagName);
         
         assertEquals(tileGA.getFilterFileName(), "testdata/110519_IL33_06284/Data/Intensities/BaseCalls//s_8_0112.filter");
         
